[tool.poetry]
name = "spp"
version = "0.1.0"
description = ""
authors = ["Mirosław Błażej <miro662@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
pre-commit = "^3.0.4"
mypy = "^1.0.0"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
