[tool.poetry]
name = "spp"
version = "0.1.0"
description = ""
authors = ["Mirosław Błażej <miro662@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.3"
alembic = "^1.9.3"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
pre-commit = "^3.0.4"
mypy = "^1.0.0"
pyproject-flake8 = "^6.0.0.post1"


[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["spp/db/alembic/"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
